# lesta_autofighter

./: CMakeLists.txt  LICENSE  README.md
src/game/: CMakeLists.txt
src/game/include/configs/: damage_types.h  fight_configs.h  hero_configs.h  monster_configs.h  weapon_configs.h
src/game/include/game/: bootstrap.h  core.h  damage.h  fight.h  phase.h  unit.h  unit_ability.h  unit_config.h  unit_factory.h  user_interface.h  weapon.h  weapon_config.h
src/game/include/types/: forward_declarations.h
src/game/src/: bootstrap.cpp  core.cpp  monster_factory.cpp  monster_factory.h  unit.cpp  unit_ability.cpp  unit_factory.cpp  weapon.cpp
src/game/src/abilities/: action_surge.cpp  action_surge.h  append_agillity.cpp  append_agillity.h  append_health.cpp  append_health.h  append_stamina.cpp  append_stamina.h  append_strength.cpp  append_strength.h  bludgeoning_damage_receiver.cpp  bludgeoning_damage_receiver.h  drop_weapon.cpp  drop_weapon.h  drop_weapon_on_death.cpp  drop_weapon_on_death.h  flame_attack.cpp  flame_attack.h  hidden_attack.cpp  hidden_attack.h  modify_config.cpp  modify_config.h  poison.cpp  poison.h  rage.cpp  rage.h  shield.cpp  shield.h  slashing_damage_protection.cpp  slashing_damage_protection.h  stone_skin.cpp  stone_skin.h
src/game/src/hero_factories/: barbarian_factory.cpp  barbarian_factory.h  rogue_factory.cpp  rogue_factory.h  warrior_factory.cpp  warrior_factory.h
src/game/src/phases/: end_fight.cpp  end_fight.h  end_game.cpp  end_game.h  fight.cpp  fight.h  setup_hero.cpp  setup_hero.h  setup_monster.cpp  setup_monster.h  start_fight.cpp  (+3 more)
(+5 files in other folders)
